# userscannerweb

./: .gitignore  README.md  pyproject.toml  vercel.json
user_scanner/: __main__.py
user_scanner/social/: telegram.py
userscanner-flask/: app.py  requirements.txt  vercel.json
userscanner-flask/static/: style.css
userscanner-flask/templates/: index.html
web/backend/: main.py  requirements.txt
web/frontend/: package-lock.json  package.json
web/frontend/public/: index.html
web/frontend/src/: App.js
